sdk_tests/tests/read-write-macro-fail/array_length_must_be_literal.rs
#![no_main]
use read_write_state_derive::ReadWriteState;

#[derive(ReadWriteState)]
struct StructWithArray {
    my_array: [u8; 8*8]
}